@@ -20,44 +20,59 @@ package org.apache.pulsar.broker.authentication;
 
 import java.io.Closeable;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-
 import java.util.Optional;
+import java.util.stream.Collectors;
 import javax.naming.AuthenticationException;
 import javax.servlet.http.HttpServletRequest;
-
 import org.apache.commons.lang3.StringUtils;
 import org.apache.pulsar.broker.PulsarServerException;
 import org.apache.pulsar.broker.ServiceConfiguration;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.collect.Maps;
-
 /**
- * Authentication service
+ * Authentication service.
  *
  */
 public class AuthenticationService implements Closeable {
     private static final Logger LOG = LoggerFactory.getLogger(AuthenticationService.class);
     private final String anonymousUserRole;
 
-    private final Map<String, AuthenticationProvider> providers = Maps.newHashMap();
+    private final Map<String, AuthenticationProvider> providers = new HashMap<>();
 
     public AuthenticationService(ServiceConfiguration conf) throws PulsarServerException {
         anonymousUserRole = conf.getAnonymousUserRole();
         if (conf.isAuthenticationEnabled()) {
             try {
-                AuthenticationProvider provider;
+                Map<String, List<AuthenticationProvider>> providerMap = new HashMap<>();
                 for (String className : conf.getAuthenticationProviders()) {
                     if (className.isEmpty()) {
                         continue;
                     }
-                    provider = (AuthenticationProvider) Class.forName(className).newInstance();
+                    AuthenticationProvider provider = (AuthenticationProvider) Class.forName(className)
+                            .getDeclaredConstructor().newInstance();
+
+                    List<AuthenticationProvider> providerList = providerMap.get(provider.getAuthMethodName());
+                    if (null == providerList) {
+                        providerList = new ArrayList<>(1);
+                        providerMap.put(provider.getAuthMethodName(), providerList);
+                    }
+                    providerList.add(provider);
+                }
+
+                for (Map.Entry<String, List<AuthenticationProvider>> entry : providerMap.entrySet()) {
+                    AuthenticationProviderList provider = new AuthenticationProviderList(entry.getValue());
                     provider.initialize(conf);
                     providers.put(provider.getAuthMethodName(), provider);
-                    LOG.info("{} has been loaded.", className);
+                    LOG.info("[{}] has been loaded.",
+                        entry.getValue().stream().map(
+                            p -> p.getClass().getName()).collect(Collectors.joining(",")));
                 }
+
                 if (providers.isEmpty()) {
                     LOG.warn("No authentication providers are loaded.");
                 }
@@ -69,29 +84,39 @@ public class AuthenticationService implements Closeable {
         }
     }
 
-    public String authenticate(AuthenticationDataSource authData, String authMethodName)
-            throws AuthenticationException {
-        AuthenticationProvider provider = providers.get(authMethodName);
-        if (provider != null) {
-            return provider.authenticate(authData);
-        } else {
-            if (StringUtils.isNotBlank(anonymousUserRole)) {
-                return anonymousUserRole;
-            }
-            throw new AuthenticationException("Unsupported authentication mode: " + authMethodName);
-        }
-    }
-
     public String authenticateHttpRequest(HttpServletRequest request) throws AuthenticationException {
-        // Try to validate with any configured provider
         AuthenticationException authenticationException = null;
         AuthenticationDataSource authData = new AuthenticationDataHttps(request);
-        for (AuthenticationProvider provider : providers.values()) {
+        String authMethodName = request.getHeader("X-Pulsar-Auth-Method-Name");
+
+        if (authMethodName != null) {
+            AuthenticationProvider providerToUse = providers.get(authMethodName);
+            if (providerToUse == null) {
+                throw new AuthenticationException(
+                        String.format("Unsupported authentication method: [%s].", authMethodName));
+            }
             try {
-                return provider.authenticate(authData);
+                return providerToUse.authenticate(authData);
             } catch (AuthenticationException e) {
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug("Authentication failed for provider " + providerToUse.getAuthMethodName() + " : "
+                            + e.getMessage(), e);
+                }
                 // Store the exception so we can throw it later instead of a generic one
                 authenticationException = e;
+                throw e;
+            }
+        } else {
+            for (AuthenticationProvider provider : providers.values()) {
+                try {
+                    return provider.authenticate(authData);
+                } catch (AuthenticationException e) {
+                    if (LOG.isDebugEnabled()) {
+                        LOG.debug("Authentication failed for provider " + provider.getAuthMethodName() + ": "
+                                + e.getMessage(), e);
+                    }
+                    // Ignore the exception because we don't know which authentication method is expected here.
+                }
             }
         }
 
