@@ -19,11 +19,8 @@
 package org.apache.pulsar.broker.delayed;
 
 import static com.google.common.base.Preconditions.checkArgument;
-
 import java.io.IOException;
-
 import lombok.experimental.UtilityClass;
-
 import org.apache.pulsar.broker.ServiceConfiguration;
 
 @UtilityClass
@@ -33,7 +30,7 @@ public class DelayedDeliveryTrackerLoader {
         Class<?> factoryClass;
         try {
             factoryClass = Class.forName(conf.getDelayedDeliveryTrackerFactoryClassName());
-            Object obj = factoryClass.newInstance();
+            Object obj = factoryClass.getDeclaredConstructor().newInstance();
             checkArgument(obj instanceof DelayedDeliveryTrackerFactory,
                     "The factory has to be an instance of " + DelayedDeliveryTrackerFactory.class.getName());
 
