@@ -19,11 +19,8 @@
 package org.apache.pulsar.broker.service.schema;
 
 import com.google.common.collect.Maps;
-import java.lang.reflect.Method;
 import java.util.Map;
 import java.util.Set;
-import org.apache.pulsar.broker.PulsarService;
-import org.apache.pulsar.broker.ServiceConfiguration;
 import org.apache.pulsar.broker.service.schema.validator.SchemaRegistryServiceWithSchemaDataValidator;
 import org.apache.pulsar.common.protocol.schema.SchemaStorage;
 import org.apache.pulsar.common.schema.SchemaType;
@@ -31,14 +28,15 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public interface SchemaRegistryService extends SchemaRegistry {
-    Logger log = LoggerFactory.getLogger(SchemaRegistryService.class);
+    Logger LOG = LoggerFactory.getLogger(SchemaRegistryService.class);
     long NO_SCHEMA_VERSION = -1L;
 
     static Map<SchemaType, SchemaCompatibilityCheck> getCheckers(Set<String> checkerClasses) throws Exception {
         Map<SchemaType, SchemaCompatibilityCheck> checkers = Maps.newHashMap();
         for (String className : checkerClasses) {
             final Class<?> checkerClass = Class.forName(className);
-            SchemaCompatibilityCheck instance = (SchemaCompatibilityCheck) checkerClass.newInstance();
+            SchemaCompatibilityCheck instance = (SchemaCompatibilityCheck) checkerClass
+                    .getDeclaredConstructor().newInstance();
             checkers.put(instance.getSchemaType(), instance);
         }
         return checkers;
@@ -52,7 +50,7 @@ public interface SchemaRegistryService extends SchemaRegistry {
                 return SchemaRegistryServiceWithSchemaDataValidator.of(
                         new SchemaRegistryServiceImpl(schemaStorage, checkers));
             } catch (Exception e) {
-                log.warn("Unable to create schema registry storage, defaulting to empty storage", e);
+                LOG.warn("Unable to create schema registry storage, defaulting to empty storage", e);
             }
         }
         return new DefaultSchemaRegistryService();
